--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "my-app",
+	"name": "aignite-bootcamp",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -7,7 +7,8 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"migrate": "node scripts/migrate.js"
+		"migrate": "tsx src/scripts/migrate.ts",
+		"type-check": "tsc --noEmit"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.10.0",
@@ -44,6 +45,7 @@
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
 		"@types/node": "^20",
+		"@types/pg": "^8.15.5",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"autoprefixer": "^10.4.21",
@@ -53,6 +55,7 @@
 		"pg": "^8.13.1",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
+		"tsx": "^4.20.4",
 		"typescript": "^5"
 	}
 }
