--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,14 +22,6 @@
 			"@/*": ["./src/*"]
 		}
 	},
-	"include": [
-		"next-env.d.ts",
-		"**/*.ts",
-		"**/*.tsx",
-		".next/types/**/*.ts",
-		"utils/action.ts",
-		"app/api/upload/route.js",
-		"app/dashboard/upload/_components/SelectInput.jsx"
-	],
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
 	"exclude": ["node_modules"]
 }
